--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
         <h2 class="text-center">Top Tourist Places in Jaipur</h2>
         <div class="box-sec">
-            <box class="card text-center"><a href="/cities/site1.html">box1</a></box>
+            <box class="card text-center"><a href="cities/site1.html">box1</a></box>
             <box class="card text-center"><a href="#">box2</a></box>
             <box class="card text-center"><a href="#">box3</a></box>
             <box class="card text-center"><a href="#">box4</a></box>
