--- a/jaipur.html
+++ b/jaipur.html
@@ -13,30 +13,7 @@
 
 </head>
 <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-              <img class="logo" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Akatsuki is the connector between government and people which provides insights for net zero emissions at tourist places.This team has build a website which is open for all and which tells you the problems as well as solutions which can lead to net zero emission." src="https://www.pngmart.com/files/13/Akatsuki-Logo-PNG-Pic.png" width="5%">
-            <button onclick="document.location=''" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Cities
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="jaipur.html">Jaipur</a></li>
-                  </ul>
-                </li>          
-              </ul>
-            </div>
-          </div>
-        </nav>      <!-- Ranking -->
+      <!-- Ranking -->
       <br />
       <h2 class="text-center"><i>Tourist Sites in Jaipur!</i> </h2>
       <br />
