--- a/jaipur.html
+++ b/jaipur.html
@@ -13,6 +13,65 @@
 
 </head>
 <body>
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <img class="logo" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Akatsuki is the connector between government and people which provides insights for net zero emissions at tourist places.This team has build a website which is open for all and which tells you the problems as well as solutions which can lead to net zero emission." src="https://www.pngmart.com/files/13/Akatsuki-Logo-PNG-Pic.png" width="5%">
+                  <button onclick="document.location=''" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Cities
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="/jaipur.html">Jaipur</a></li>
+                        </ul>
+                      </li>          
+                    </ul>
+                    <div class="mx-1">
+                      <button class="btn btn-outline-danger rounded-pill text-center align-items-center" data-bs-toggle="modal"
+                          data-bs-target="#signupModal">Feed Back</button>
+                  </div>
+                  </div>
+                </div>
+              </nav>
+    
+            <!-- SignUp Modal -->
+            <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="signupModalLabel">Give your Feed Back</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputName1" class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" id="exampleInputName1">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        placeholder="name@example.com" aria-describedby="emailHelp">
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                </div>
+                                <div class="mb-3">
+                                  <label for="exampleInputName1" class="form-label">Description</label>
+                                  <textarea class="form-control" id="exampleInputName1"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-outline-success rounded-pill">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
       <!-- Ranking -->
       <br />
       <h2 class="text-center"><i>Tourist Sites in Jaipur!</i> </h2>
